[project]
name = "ai-llm-website-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipython>=9.5.0",
    "openai>=1.107.1",
    "requests>=2.32.5",
]
